fix scrollbar

--- a/frontend/src/css/main_menu_container.scss
+++ b/frontend/src/css/main_menu_container.scss
@@ -4,7 +4,7 @@
     color: aqua;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 85vh;
+    grid-template-rows: 1fr 70vh;
   }
 
 .tab-content {
